<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
	<Button 
	    android:id="@+id/backButton"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="5dp"
	    android:background="@drawable/back_button"
	    android:onClick="back" />
    <TextView 
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_workout"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/backButton"
        android:layout_marginLeft="20dp"
        style="@style/text_black_18" />
    <View 
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@drawable/line"
        android:layout_below="@+id/titleText"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />
    
    <Button 
        android:id="@+id/fromExercisesButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/from_exercises"
        android:onClick="fromExercises"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_selector"
        style="@style/text_white_bold_18" />
    
    <Button 
        android:id="@+id/fromEffectButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/from_effect"
        android:layout_below="@+id/fromExercisesButton"
        android:onClick="fromEffect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_selector"
        style="@style/text_white_bold_18" />

</RelativeLayout>
