<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    android:background="@color/white" >
	<Button 
	    android:id="@+id/backButton"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="5dp"
	    android:background="@drawable/back_button"
	    android:onClick="back" />
    <TextView 
        android:id="@+id/propertiesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_properties"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/backButton"
        style="@style/text_black_18" />
    <View 
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@drawable/line"
        android:layout_below="@+id/propertiesText"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />
    
    <Button 
        android:id="@+id/setTrainingButton"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/set_training"
        android:layout_below="@+id/line"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:onClick="switchTrainType" />
    <Button 
        android:id="@+id/intervalTrainingButton"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/interval_training"
        android:layout_alignBottom="@+id/setTrainingButton"
        android:layout_toRightOf="@+id/setTrainingButton"
        android:onClick="switchTrainType" />
    <TextView 
        android:id="@+id/trainingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training"
        android:layout_alignBaseline="@+id/setTrainingButton"
        android:layout_toRightOf="@+id/intervalTrainingButton"
        android:layout_marginLeft="10dp"
        style="@style/text_black_18" />

    <ListView 
        android:id="@+id/setList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setTrainingButton"
        android:layout_above="@+id/nextButton"
        android:divider="@drawable/divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/item_selector"
   		android:background="@color/light_grey" />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@drawable/shadow_bottom"
        android:layout_alignTop="@+id/setList" />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@drawable/shadow_top"
        android:layout_alignBottom="@+id/setList" />
   <View 
        android:id="@+id/lineBottom"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@drawable/line"
        android:layout_below="@+id/setList"
        android:layout_centerHorizontal="true" />
   <View 
        android:id="@+id/lineTop"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@drawable/line"
        android:layout_above="@+id/setList"
        android:layout_centerHorizontal="true" />
    
    <Button 
        android:id="@+id/nextButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:onClick="next"
        android:background="@drawable/button_selector"
        style="@style/text_white_bold_18" />
    
    <Button 
        android:id="@+id/infoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_alignBaseline="@+id/nextButton"
        android:onClick="info"
        android:background="@drawable/info_button" />
    
</RelativeLayout>
